<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment3">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/china"
                    android:layout_alignParentRight="true"/>
                <ImageView
                    android:id="@+id/image_weather"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/thunder_stom"
                    ></ImageView>

                <TextView
                    android:id="@+id/text_weather1"
                    android:layout_width="@dimen/text_width"
                    android:layout_height="@dimen/text_height"
                    android:layout_alignParentLeft="true"
                    android:text="Karma"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="italic"></TextView>
                <TextView
                    android:id="@+id/text_weather2"
                    android:layout_width="@dimen/text_width"
                    android:layout_height="@dimen/text_height"
                    android:text="China"
                    android:textSize="@dimen/text_size_title"
                    android:layout_alignParentRight="true"
                    android:textStyle="bold">

                </TextView>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="310dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@android:dimen/app_icon_size"
                    android:orientation="vertical"
                    android:background="@color/bule">
                    <LinearLayout
                        android:id="@+id/container1"
                        android:layout_width="match_parent"
                        android:layout_height="48px"
                        android:orientation="horizontal"
                        android:padding="4px">
                        <TextView
                            android:id="@+id/item1"
                            android:layout_width="180px"
                            android:layout_height="match_parent"
                            android:paddingLeft="0px"
                            android:paddingRight="0px"
                            android:text="@string/Monday"/>
                        <View
                            android:layout_width="2px"
                            android:layout_height="1px"
                            />
                        <View
                            android:layout_width="16dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8px"
                            android:layout_marginRight="8px"
                            android:background="@drawable/thunder" />
                        <View
                            android:layout_width="0px"
                            android:layout_height="1px"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/item2"
                            android:layout_width="300px"
                            android:layout_height="18dp"
                            android:paddingLeft="16px"
                            android:paddingRight="16px"
                            android:text="@string/Thurder" />
                        <TextView
                            android:id="@+id/item3"
                            android:layout_width="150px"
                            android:layout_height="match_parent"
                            android:paddingLeft="8px"
                            android:paddingRight="8px"
                            android:text="20 - 25"/>
                        <View
                            android:layout_width="0px"
                            android:layout_height="1px"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/container2"
                        android:layout_width="match_parent"
                        android:layout_height="48px"
                        android:orientation="horizontal"
                        android:padding="4px">
                        <TextView
                            android:id="@+id/item21"
                            android:layout_width="180px"
                            android:layout_height="match_parent"
                            android:paddingLeft="1px"
                            android:paddingRight="1px"
                            android:text="@string/Tuesday"
                            />
                        <View
                            android:layout_width="2px"
                            android:layout_height="1px"
                            />
                        <View
                            android:layout_width="16dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8px"
                            android:layout_marginRight="8px"
                            android:background="@drawable/rain_thunder" />
                        <View
                            android:layout_width="0px"
                            android:layout_height="1px"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/item22"
                            android:layout_width="300px"
                            android:layout_height="18dp"
                            android:paddingLeft="16px"
                            android:paddingRight="16px"
                            android:text="@string/Rain" />
                        <TextView
                            android:id="@+id/item23"
                            android:layout_width="150px"
                            android:layout_height="match_parent"
                            android:paddingLeft="8px"
                            android:paddingRight="8px"
                            android:text="20 - 23"/>
                        <View
                            android:layout_width="0px"
                            android:layout_height="1px"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/container3"
                        android:layout_width="match_parent"
                        android:layout_height="48px"
                        android:orientation="horizontal"
                        android:padding="4px">
                        <TextView
                            android:id="@+id/item31"
                            android:layout_width="180px"
                            android:layout_height="match_parent"
                            android:paddingLeft="0px"
                            android:paddingRight="0px"
                            android:text="@string/Wednesday"
                            />
                        <View
                            android:layout_width="2px"
                            android:layout_height="1px"
                            />
                        <View
                            android:layout_width="16dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8px"
                            android:layout_marginRight="8px"
                            android:background="@drawable/thunder_stom" />
                        <View
                            android:layout_width="0px"
                            android:layout_height="1px"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/item32"
                            android:layout_width="300px"
                            android:layout_height="18dp"
                            android:paddingLeft="16px"
                            android:paddingRight="16px"
                            android:text="@string/ThunderStom" />
                        <TextView
                            android:id="@+id/item33"
                            android:layout_width="150px"
                            android:layout_height="match_parent"
                            android:paddingLeft="8px"
                            android:paddingRight="8px"
                            android:text="18 - 20"/>
                        <View
                            android:layout_width="0px"
                            android:layout_height="1px"
                            android:layout_weight="1" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/container41"
                        android:layout_width="match_parent"
                        android:layout_height="48px"
                        android:orientation="horizontal"
                        android:padding="4px">
                        <TextView
                            android:id="@+id/item41"
                            android:layout_width="180px"
                            android:layout_height="match_parent"
                            android:paddingLeft="0px"
                            android:paddingRight="0px"
                            android:text="@string/Thurday"
                            />
                        <View
                            android:layout_width="2px"
                            android:layout_height="1px"
                            />
                        <View
                            android:layout_width="16dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8px"
                            android:layout_marginRight="8px"
                            android:background="@drawable/thunder_stom" />
                        <View
                            android:layout_width="0px"
                            android:layout_height="1px"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/item42"
                            android:layout_width="300px"
                            android:layout_height="18dp"
                            android:paddingLeft="16px"
                            android:paddingRight="16px"
                            android:text="@string/Stom" />
                        <TextView
                            android:id="@+id/item43"
                            android:layout_width="150px"
                            android:layout_height="match_parent"
                            android:paddingLeft="8px"
                            android:paddingRight="8px"
                            android:text="22 - 26"/>
                        <View
                            android:layout_width="0px"
                            android:layout_height="1px"
                            android:layout_weight="1" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>